fix: remove ineffective z-index from bouncingText class

--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -14,6 +14,5 @@
   font-weight: 300;
   white-space: nowrap;
   margin: 0;
-  z-index: 1;
 }
 
